tests/NormalTests/paczka1/fuzzy1/84478449.err
Error in line 6: 7ledZ6I84 S735 7,6
Error in line 8: A589 A91 19,7
Error in line 22: A589 A91 64,4
Error in line 26: 3WkHchxb S735 98,7
Error in line 28: A589 S735 98,0
